# luci-in-docker

./: .gitignore  Dockerfile  Dockerfile.nano  README.md  ReadMe.md  init.sh
.github/workflows/: build.yml  build_nano.yml
container/: Dockerfile.arm64  Dockerfile.nano  Dockerfile.nano.arm64
container/hooks/: pre_build
hooks/: pre_build
luci/luci-base/htdocs/luci-static/resources/: form.js  fs.js  luci.js  ui.js
luci/luci-base/luasrc/: dispatcher.lua  sauth.lua  sys.lua
luci/luci-base/luasrc/controller/admin/: index.lua  uci.lua
luci/luci-base/luasrc/model/: uci.lua
luci/luci-base/po/templates/: base.pot
luci/luci-base/po/zh_Hans/: base.po
luci/luci-base/po/zh_Hant/: base.po
luci/luci-base/root/etc/: rc.common
luci/luci-base/root/etc/config/: luci  ucitrack
luci/luci-base/root/sbin/: luci-reload
luci/luci-fake-ubus/luasrc/model/: fubus.lua
luci/luci-fake-ubus/luasrc/model/fubus/: file.lua  (+4 more)
luci/luci-lib-base/luasrc/: util.lua
luci/luci-lib-scripts/root/lib/: functions.sh
luci/luci-lib-scripts/root/sbin/: luci-reload
luci/luci-mod-plugin/po/zh_Hans/: plugin.po
luci/luci-socket-forwarder/htdocs/cgi-bin/: socket_forwarder
po/zh-cn/: base.po
root/etc/config/: luci  system  ucitrack  uhttpd
root/etc/init.d/: sysfixtime
root/lib/: functions.sh
root/lib/config/: uci.sh
root/sbin/: luci-reload  luci-reload-docker
root/usr/lib/: libjson-c.so.2  liblucihttp.so.0  liblucihttp.so.0.1
root/usr/sbin/: uci  uhttpd
root/www/luci-static/bootstrap/: cascade.css
src/cgi-io/: CMakeLists.txt  main.c  multipart_parser.c  util.c  util.h
(+52 files in other folders)
